--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TypeScript + React + Webpack</title>
+    <title>React Tour of Heroes</title>
 </head>
-<body>
-<div id="anchor"></div>
+<body data-main>
+<div data-main id="anchor"></div>
 </body>
 </html>
